[project]
name = "arenamind-backend"
version = "1.0.0"
description = "ArenaMind AI — Enterprise Agentic Backend for Smart Stadium Operations"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth & Security
    "pyjwt[crypto]>=2.8.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    # AI / LLM
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "openai>=1.40.0",
    "google-generativeai>=0.8.0",
    # Vector DB
    "qdrant-client>=1.11.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    # Validation & Serialization
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Observability
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S105", "S106"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
